# playbook-ml

./: .env.example  .gitignore  README.md  autoforge.py  brain.py  engine_brain.py  engine_export.py  engine_extract.py  engine_tournament.py  pyproject.toml  run.py  sdk.py  tournament.py
StockTiming/: .env.example  champion_archetype.json  playbook.jsonl  retired_topics.json  simulation.py  top_candidates.json  tournament.py
StockTiming/prompts/: brain.md  director.md  extract.md
commands/: bootstrap.py  cli.py  run_cmd.py  shared.py  tools.py
template/: simulation.py  tournament.py
template/prompts/: brain.md  director.md  extract.md
