[project]
name = "the-engine"
version = "0.1.0"
description = "Autonomous domain learning via simulation tournament + AI direction"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
    "rich>=13.0.0",
]

[project.scripts]
engine = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
